--- a/src/main/resources/templates/evento/eventoShow.html
+++ b/src/main/resources/templates/evento/eventoShow.html
@@ -60,7 +60,7 @@
 								<!-- DESTINATARI EVENTO -->
 								<div class="item form-group">
 									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
-										<span class="label-show" th:text="#{label.procedura_formativa}">Id del Provider</span>
+										<span class="label-show" th:text="#{label.destinatari_evento}">Id del Provider</span>
 									</label>
 
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
