--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -122,8 +122,8 @@
 						<table th:unless="${#lists.isEmpty(eventoList)}" class="datatable-responsive-eventi-provider table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 							<thead>
 								<tr>
-									<th th:text="#{label.titolo}">label.titolo</th>
 									<th th:text="#{label.codice_identificativo}">label.codice_identificativo</th>
+									<th th:text="#{label.titolo}">label.titolo</th>
 									<th th:text="#{label.procedura_formativa}">label.procedura_formativa</th>
 									<th th:text="#{label.prezzo}">label.prezzo</th>
 									<th th:text="#{label.stato}">label.stato</th>
@@ -132,8 +132,8 @@
 							</thead>
 							<tbody th:remove="all-but-first">
 								<tr th:each="evento, row : ${eventoList}">
-									<td><a th:text="${evento.titolo}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/show|}"></a></td>
-									<td th:text="${evento.getCodiceIdentificativo()}"></td>
+									<td><a th:text="${evento.getCodiceIdentificativo()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/show|}"></a></td>
+									<td th:text="${evento.titolo}"></td>
 									<td th:text="${evento.proceduraFormativa.nome}"></td>
 									<td th:text="${#numbers.formatDecimal(evento.costo, 1, 'POINT', 2, 'COMMA')}"></td>
 									<td th:if="${evento.pagato}"><span class="label-pagato" th:text="#{label.pagato}"></span></td>
