--- a/src/main/resources/templates/evento/eventoShow.html
+++ b/src/main/resources/templates/evento/eventoShow.html
@@ -210,7 +210,7 @@
 											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 												<table class="professioni-discipline table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline"
 													cellspacing="0" width="100%">
-													<thead>
+													<thead style="display: none;">
 														<tr>
 															<th th:text="#{label.professione}">Professione</th>
 															<th th:text="#{label.disciplina}">Disciplina</th>
@@ -281,10 +281,40 @@
 									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 										<span class="label-show" th:text="#{label.responsabili_scientifici}">Responsabili scientifici</span>
 									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-										<th:block th:include="evento/eventoEdit :: responsabiliScientifici" />
+									<div th:if="${eventoWrapper.evento.responsabili != null and !#sets.isEmpty(eventoWrapper.evento.responsabili)}">
+										<div class="item form-group" style="clear:both; padding:2px;"></div>
+										<div class="item form-group" style="clear:both">
+											<div class="col-md-3 col-sm-3 col-xs-11"></div>
+											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+												<table id="responsabiliScientifici" class="datatable-responsive-responsabili table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+													<thead>
+														 <tr>
+															<th th:text="#{label.cognome}">Cognome</th>
+															<th th:text="#{label.nome}">Nome</th>
+															<th th:text="#{label.cf}">CF</th>
+															<th th:text="#{label.qualifica}">Qualifica</th>
+															<th th:text="#{label.cv}">CV</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:attr="data-row-id=${__${status.index}__}" th:each="persona, status : ${eventoWrapper.evento.responsabili}">
+															<td th:text="${persona.anagrafica.cognome}"></td>
+															<td th:text="${persona.anagrafica.nome}"></td>
+															<td th:text="${persona.anagrafica.codiceFiscale}"></td>
+															<td th:text="${persona.qualifica}"></td>
+															<td>
+																<a th:if="${persona.anagrafica.cv?.id}" th:text="${persona.anagrafica?.cv.nomeFile}" th:href="@{|/file/${persona.anagrafica.cv.id}|}"></a>
+																<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
+															</td>
+														</tr>
+													</tbody>
+												</table>
+											</div>
+										</div>
 									</div>
-									<div class="danger">**TODO</div>
+									<div th:unless="${eventoWrapper.evento.responsabili != null and !#sets.isEmpty(eventoWrapper.evento.responsabili)}" class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
+									</div>
 								</div>
 
 								<!-- DOCENTI/RELATORI/TUTOR -->
@@ -292,10 +322,42 @@
 									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 										<span class="label-show" th:text="#{label.docenti_relatori_tutor}">Docenti/Relatori/Tutor</span>
 									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-										<th:block th:include="evento/eventoEdit :: docenti" />
+									<div th:if="${eventoWrapper.evento.docenti != null and !#sets.isEmpty(eventoWrapper.evento.docenti)}">
+										<div class="item form-group" style="clear:both; padding:2px;"></div>
+										<div class="item form-group" style="clear:both">
+											<div class="col-md-3 col-sm-3 col-xs-11"></div>
+											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+												<table id="docenti" class="datatable-responsive-docenti table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+													<thead>
+														 <tr>
+															<th th:text="#{label.cognome}">Cognome</th>
+															<th th:text="#{label.nome}">Nome</th>
+															<th th:text="#{label.cf}">CF</th>
+															<th th:text="#{label.ruolo}">Ruolo</th>
+															<th th:text="#{label.titolare} + '/' + #{label.sostituto}">Titolare/Sostituto</th>
+															<th th:text="#{label.cv}">CV</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:if="${#lists.size(eventoWrapper.docenti) > 0}" th:attr="data-row-id=${__${status.index}__}" th:each="persona, status : ${eventoWrapper.docenti}">
+															<td th:text="${persona.anagrafica.cognome}"></td>
+															<td th:text="${persona.anagrafica.nome}"></td>
+															<td th:text="${persona.anagrafica.codiceFiscale}"></td>
+															<td th:text="${persona.ruolo}"></td>
+															<td th:text="${persona.titolare}"></td>
+															<td>
+																<a th:if="${persona.anagrafica.cv?.id}" th:text="${persona.anagrafica?.cv.nomeFile}" th:href="@{|/file/${persona.anagrafica.cv.id}|}"></a>
+																<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
+															</td>
+														</tr>
+													</tbody>
+												</table>
+											</div>
+										</div>
 									</div>
-									<div class="danger">**TODO</div>
+									<div th:unless="${eventoWrapper.evento.docenti != null and !#sets.isEmpty(eventoWrapper.evento.docenti)}" class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
+									</div>
 								</div>
 
 								<div class="divider-dashed"></div>
@@ -330,7 +392,15 @@
 									</div>
 								</div>
 
-								<div class="divider-dashed"></div>
+								<div class="item form-group">
+									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+									</label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="value danger">**TODO</div>
+									</div>
+								</div>
+
+								<div class="divider"></div>
 
 								<!-- BROCHURE EVENTO -->
 								<div class="item form-group">
@@ -400,8 +470,38 @@
 									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 										<span class="label-show" th:text="#{label.responsabile_segreteria_organizzativa}">Responsabile segreteria organizzativa</span>
 									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-										<div class="danger">**TODO</div>
+									<div th:if="${eventoWrapper.evento.responsabileSegreteria != null and !#sets.isEmpty(eventoWrapper.evento.responsabileSegreteria) and eventoWrapper.evento.responsabileSegreteria.anagrafica != null}">
+										<div class="item form-group" style="clear:both; padding:2px;"></div>
+										<div class="item form-group" style="clear:both">
+											<div class="col-md-3 col-sm-3 col-xs-11"></div>
+											<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+												<table id="responsabileSegreteria" class="datatable-responsive-responsabileSegreteria table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+													<thead>
+														 <tr>
+															<th th:text="#{label.cognome}">Cognome</th>
+															<th th:text="#{label.nome}">Nome</th>
+															<th th:text="#{label.cf}">CF</th>
+															<th th:text="#{label.email}">Email</th>
+															<th th:text="#{label.telefono}">Telefono</th>
+															<th th:text="#{label.cellulare}">Cellulare</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:if="${eventoWrapper.evento.responsabileSegreteria != null and eventoWrapper.evento.responsabileSegreteria.anagrafica != null}">
+															<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.cognome}"></td>
+															<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.nome}"></td>
+															<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.codiceFiscale}"></td>
+															<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.email}"></td>
+															<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.telefono}"></td>
+															<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.cellulare}"></td>
+														</tr>
+													</tbody>
+												</table>
+											</div>
+										</div>
+									</div>
+									<div th:unless="${eventoWrapper.evento.responsabileSegreteria != null and !#sets.isEmpty(eventoWrapper.evento.responsabileSegreteria) and eventoWrapper.evento.responsabileSegreteria.anagrafica != null}" class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+										<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
 									</div>
 								</div>
 
@@ -441,15 +541,15 @@
 									</div>
 								</div>
 								<!-- LINGUA STRANIERA -->
-								<div class="item form-group" th:if="${eventoWrapper.evento.soloLinguaItaliana == false}">
-									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
-										<span class="label-show" th:text="#{label.lingua_straniera_utilizzata}">Lingua straniera utilizzata</span>
-									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-										<div class="value" th:if="${eventoWrapper.evento.linguaStranieraUtilizzata != null and !#string.isEmpty(eventoWrapper.evento.linguaStranieraUtilizzata)}" th:text="${eventoWrapper.evento.linguaStranieraUtilizzata}"></div>
-										<div class="value danger" th:unless="${eventoWrapper.evento.linguaStranieraUtilizzata != null and !#string.isEmpty(eventoWrapper.evento.linguaStranieraUtilizzata)}" th:text="#{label.dato_non_inserito}"></div>
-									</div>
-								</div>
+<!-- 								<div class="item form-group" th:if="${eventoWrapper.evento.soloLinguaItaliana == false}"> -->
+<!-- 									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11"> -->
+<!-- 										<span class="label-show" th:text="#{label.lingua_straniera_utilizzata}">Lingua straniera utilizzata</span> -->
+<!-- 									</label> -->
+<!-- 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12"> -->
+<!-- 										<div class="value" th:if="${eventoWrapper.evento.linguaStranieraUtilizzata != null and !#string.isEmpty(eventoWrapper.evento.linguaStranieraUtilizzata)}" th:text="${eventoWrapper.evento.linguaStranieraUtilizzata}"></div> -->
+<!-- 										<div class="value danger" th:unless="${eventoWrapper.evento.linguaStranieraUtilizzata != null and !#string.isEmpty(eventoWrapper.evento.linguaStranieraUtilizzata)}" th:text="#{label.dato_non_inserito}"></div> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
 								<!-- TRADUZIONE RADIO -->
 								<div class="item form-group" th:if="${eventoWrapper.evento.soloLinguaItaliana == false}">
 									<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
