--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -140,10 +140,10 @@
 									<td th:unless="${evento.pagato}"><span class="label-non-pagato" th:text="#{label.non_pagato}"></span></td>
 									<td>
 										<div class="button-container single">
-											<a class="btn btn-danger btn-table double" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/delete|}"><i class="fa fa-trash"> </i> <span th:text="#{label.elimina}"> </span></a>
 											<a class="btn btn-primary btn-table double" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.modifica}"> </span></a>
+											<a class="btn btn-danger btn-table double" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/delete|}"><i class="fa fa-trash"> </i> <span th:text="#{label.elimina}"> </span></a>
 											<a class="btn btn-success btn-table double"><i class="fa fa-euro"> </i> <span th:text="#{label.paga}"> </span></a>
-											<a class="btn btn-info btn-table double" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/rendiconto|}"><i class="fa fa-file-text"> </i> <span th:text="#{label.rendiconto}"> </span></a>
+											<a class="btn btn-warning btn-table double" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/rendiconto|}"><i class="fa fa-file-text"> </i> <span th:text="#{label.rendiconto}"> </span></a>
 										</div>
 									</td>
 								</tr>
